--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
      <!-- Modal window contact form -->
 
-     <div class="modal-overlay is-open hidden">
+     <div class="modal-overlay">
       <div class="modal">
 
         <button class="modal-close-btn" type="button">
@@ -492,7 +492,7 @@
     </div>
 
     <!-- Mobile menu -->
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
       <div class="container mobile-menu-container">
     <button class="mobile-menu-close-btn js-mobile-menu" type="button">
       <svg class="icon-mobile-close" width="8" height="8"> 
@@ -558,8 +558,6 @@
         document.querySelector(".js-burger-nav").addEventListener("click", () => {
         document.querySelector(".mobile-menu").classList.add("is-open");
       });
-
-
     </script>
 
 </body>
